# VulkanCourseApp

./: .gitignore  CMakeLists.txt  VulkanCourseApp.kdev4  VulkanCourseApp.sln  main.cpp
VulkanCourseApp/: VulkanCourseApp.vcxproj  VulkanRenderer.cpp  main.cpp
shaders/: compile_shaders.sh  frag.spv  shader.frag  shader.vert  vert.spv
src/: CMakeLists.txt  Mesh.cpp  Mesh.h  Utilities.h  VulkanRenderer.cpp  VulkanRenderer.h
